--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Meneghin98/lol-discord-bot#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0"
   }
